--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+<div id="alerts"></div>
 
 <nav class="navbar navbar-default navbar-inverse" role="navigation">
   <div class="container-fluid">
@@ -29,8 +30,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
+      		<li id = "profile"><a href="profile.html">My Profile</a></li>
+      		<li id = "logout-button"><a href="#"><span class="glyphicon glyphicon-log-out" ></span> Logout</a></li>
+<!--         <li><a href="#">Link</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -42,40 +44,40 @@
             <li class="divider"></li>
             <li><a href="#">One more separated link</a></li>
           </ul>
-        </li>
+        </li> -->
+        	<li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button id = "search-submit" type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><p class="navbar-text">Already have an account?</p></li>
-        <li class="dropdown">
+        <li class="dropdown" id = "login-form">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
 			<ul id="login-dp" class="dropdown-menu">
 				<li>
 					 <div class="row">
 							<div class="col-md-12">
 								Login via
-								<div class="social-buttons">
+<!-- 								<div class="social-buttons">
 									<a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
 									<a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
-								</div>
+								</div> -->
                                 or
 								 <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
 										<div class="form-group">
 											 <label class="sr-only" for="exampleInputEmail2">Email address</label>
-											 <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+											 <input type="email" class="form-control" id="login-email" placeholder="Email address" required>
 										</div>
 										<div class="form-group">
 											 <label class="sr-only" for="exampleInputPassword2">Password</label>
-											 <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+											 <input type="password" class="form-control" id="login-password" placeholder="Password" required>
                                              <div class="help-block text-right"><a href="">Forget the password ?</a></div>
 										</div>
 										<div class="form-group">
-											 <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+											 <button type="submit" id = "login-button" class="btn btn-primary btn-block">Sign in</button>
 										</div>
 										<div class="checkbox">
 											 <label>
@@ -83,14 +85,55 @@
 											 </label>
 										</div>
 								 </form>
-							</div>
-							<div class="bottom text-center">
-								New here ? <a href="#"><b>Join Us</b></a>
+							</div> 
+					 </div>
+				</li>
+			</ul>
+
+        </li>
+
+         <li class="dropdown" id = "signup-form">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Signup</b> <span class="caret"></span></a>
+
+        <ul id="signup-dp" class="dropdown-menu">
+				<li>
+					 <div class="row">
+							<div class="col-md-12">
+								 <form class="form" role="form" method="post" action="signup" accept-charset="UTF-8" id="signup-nav">
+								 		New user? Sign up here!
+
+								 		<div class="form-group">
+											 <label class="sr-only" for="alias">Alias</label>
+											 <input type="alias" class="form-control" id="signup-alias" placeholder="Alias" required>
+										</div>
+
+										<div class="form-group">
+											 <label class="sr-only" for="email">Email address</label>
+											 <input type="email" class="form-control" id="signup-email" placeholder="Email address" required>
+										</div>
+										<div class="form-group">
+											 <label class="sr-only" for="password">Password</label>
+											 <input type="password" class="form-control" id="signup-password" placeholder="Password" required>
+										</div>
+
+										<div class="form-group">
+											 <label class="sr-only" for="password-confirm">Password</label>
+											 <input type="password" class="form-control" id="signup-password-confirm" placeholder="Password Confirmation" required>
+										</div>
+
+										<div class="form-group">
+											 <button type="submit" id = "signup-button" class="btn btn-primary btn-block">Sign up</button>
+										</div>
+								 </form>
 							</div>
 					 </div>
 				</li>
 			</ul>
-        </li>
+
+		</li>
+
+
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -101,6 +144,7 @@
 <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="js/auth.js"></script>
 <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.2.39.min.js"></script>
 
