Add and buy functionality working

--- a/profile.html
+++ b/profile.html
@@ -106,7 +106,7 @@
 
 			<div id="user_listings">
 				<h3 id="header">No Current Listings</h3>
-				<ul id="items"></ul>
+				<table id="items"></table>
 			</div>
 
 			<input class="btn btn-primary" id="add-listing-button" value="Add Listing" type="button">
@@ -127,7 +127,7 @@
 					<input id="listing_description" class="form-control" placeholder="Description" type="text" required>
 
 				<label >Picture:</label>
-					<input id="listing_picture" class="form-control" placeholder="Picture" type="text" required>
+				<input type="file" class="form-control" id="pic-file-field">
 
 				<button class="btn btn-primary" type="submit" id="submit-listing-button">Submit Listing</button>
 			</div>
