--- a/uexchange.html
+++ b/uexchange.html
@@ -144,6 +144,11 @@
   </div><!-- /.container-fluid -->
 </nav>
 
+<div id="home-listings" class="center">
+	<table id="listing-items">
+	</table>
+</div>
+
 
 <!-- do not remove these: -->
 <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
