search functionality, toggle between available and sold,

--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,11 @@
 
 <body>
 	<div class="container" style="padding-top: 60px;">
+		<div class="button-holder" align="right">
+			<button id="profile-return" >Return to Listings</button>
+		</div>
 	  <h1 class="page-header">Edit Profile</h1>
+
 	  <div class="row">
 	    <!-- left column -->
 	    <div class="col-md-4 col-sm-6 col-xs-12">
@@ -113,7 +117,7 @@
 
 
 
-			<div id="add-listing-form">
+			<div id="add-listing-form" name="add-listing">
 				<label >Item Name:</label>
 					<input id="listing_name" class="form-control" placeholder="Item Name" type="text" required>
 
