changed button label

--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="container" style="padding-top: 60px;">
 		<div class="button-holder" align="right">
-			<button id="profile-return" >Return to Listings</button>
+			<button id="profile-return" >Discard Changes and Return</button>
 		</div>
 	  <h1 class="page-header">Edit Profile</h1>
 
