Fixed add listing functionality

--- a/profile.html
+++ b/profile.html
@@ -105,7 +105,7 @@
         </div>
 	      <!-- </form> -->
 	    </div>
-		<div class="container" >
+		<form class="container" >
 			<h1 class="page-header">Current Listings</h1>
 
 			<div id="user_listings">
@@ -114,7 +114,6 @@
 			</div>
 
 			<input class="btn btn-primary" id="add-listing-button" value="Add Listing" type="button">
-
 
 
 			<div id="add-listing-form" name="add-listing">
@@ -135,7 +134,6 @@
 
 				<button class="btn btn-primary" type="submit" id="submit-listing-button">Submit Listing</button>
 			</div>
-
 
 
 
