Added purchased section in user profile

--- a/profile.html
+++ b/profile.html
@@ -105,7 +105,7 @@
         </div>
 	      <!-- </form> -->
 	    </div>
-		<form class="container" >
+		<!--<form class="container" > -->
 			<h1 class="page-header">Current Listings</h1>
 
 			<div id="user_listings">
@@ -135,9 +135,18 @@
 				<button class="btn btn-primary" type="submit" id="submit-listing-button">Submit Listing</button>
 			</div>
 
+			<div>
+				<h1 class="page-header">Purchased</h1>
+				<div id="user-purchased">
+					<h3 id="purchased-header">No Purchased Items</h3>
+					<table id="purchased-items"></table>
+				</div>
+			</div>
 
 
 		</div>
+
+
 	</div>
 
 	<!-- do not remove these: -->
