--- a/uexchange.html
+++ b/uexchange.html
@@ -74,15 +74,10 @@
 										<div class="form-group">
 											 <label class="sr-only" for="exampleInputPassword2">Password</label>
 											 <input type="password" class="form-control" id="login-password" placeholder="Password" required>
-                                             <div class="help-block text-right"><a href="">Forget the password ?</a></div>
+                                             <!-- <div class="help-block text-right"><a href="">Forget the password ?</a></div> -->
 										</div>
 										<div class="form-group">
 											 <button type="submit" id = "login-button" class="btn btn-primary btn-block">Sign in</button>
-										</div>
-										<div class="checkbox">
-											 <label>
-											 <input type="checkbox"> keep me logged-in
-											 </label>
 										</div>
 								 </form>
 							</div> 
