--- a/uexchange.html
+++ b/uexchange.html
@@ -60,12 +60,12 @@
 				<li>
 					 <div class="row">
 							<div class="col-md-12">
-								Login via
+								Login 
 <!-- 								<div class="social-buttons">
 									<a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
 									<a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
 								</div> -->
-                                or
+                      
 								 <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
 										<div class="form-group">
 											 <label class="sr-only" for="exampleInputEmail2">Email address</label>
