--- a/uexchange.html
+++ b/uexchange.html
@@ -140,8 +140,8 @@
 </nav>
 
 <div id="buttonHolder" align="right">
-	<button id="view-sold">View Sold Listings</button>
-	<button id="view-available">View Available Listings</button>
+	<button id="view-sold" class = "btn btn-default">View Sold Listings</button>
+	<button id="view-available" class = "btn btn-default">View Available Listings</button>
 </div>
 <div id="search-info" class="center">
 	<h1 align="center" id="search-header"></h1>
@@ -150,8 +150,8 @@
 		<button id="include-sold-items" class="btn btn-default">Include Sold Listings</button>
 	</div>
 </div>
-<div id="home-listings" class="center">
-	<table id="listing-items">
+<div id="home-listings" class="container">
+	<table id="listing-items" class = "table table-bordered">
 	</table>
 </div>
 
